crates/service/tests/completion/snapshots/features__completion__func__call.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 3
  },
  {
    "label": "$func",
    "kind": 3
  }
]
