crates/service/tests/completion/snapshots/features__completion__func__call_named_incomplete.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "$func",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func $func)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    },
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 22
        },
        "end": {
          "line": 2,
          "character": 24
        }
      },
      "newText": "$func"
    }
  }
]
