crates/service/tests/completion/snapshots/features__completion__func__doc_comment.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  },
  {
    "label": "$func",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func $func)",
    "documentation": {
      "kind": "markdown",
      "value": "doc comment"
    }
  }
]
