crates/service/tests/completion/snapshots/features__completion__func__elem_list.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "$f",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func $f)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  },
  {
    "label": "$g",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func $g)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  }
]
