crates/service/tests/completion/snapshots/features__completion__func__export_desc_func.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "$func",
    "kind": 3,
    "documentation": {
      "kind": "markdown",
      "value": "```wat\n(func $func)\n```"
    }
  }
]
