crates/service/tests/completion/snapshots/features__completion__func__export_desc_func_following_dollar.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "$func",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func $func)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    },
    "insertText": "func"
  }
]
